<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">kitchen</string>
    <string name="action_settings">Settings</string>
    <string name="action_clear_data">Clear Data \u0026 Restart</string>
    <string name="action_save">Save Recipe</string>
    <string name="action_edit">Edit Recipe</string>
    <string name="action_edit_mode">Recipe Order and Removal</string>
    <string name="action_clear_recipe">Clear Recipe</string>
    <string name="action_delete_recipe">Delete recipe</string>
    <string name="action_add_to_recipebook">Add to Recipe Book</string>
    <string name="browse_title">Browse Recipes</string>
    <string name="favorite_title">Favorites</string>
    <string name="my_recipes_title">My Recipes</string>
    <string name="recipe_book_title">My Recipe Books</string>
    <string name="shopping_list_title">Shopping List</string>
    <string name="transfer_db_title">Copy DB to SD</string>
    <string name="title_activity_shopping_list">My Shopping List</string>
    <string name="title_activity_recipe_details">RecipeDetailsActivity</string>
    <string name="ingredient_key" translatable="false">ingredient</string>
    <string name="recipe_key" translatable="false">recipe</string>
    <string name="quantity_key" translatable="false">quantity</string>
    <string name="favorite_key" translatable="false">favorite</string>
    <string name="author_key" translatable="false">author</string>
    <string name="recipes_deleted_key" translatable="false">recipes_deleted</string>
    <string name="one_quarter_fraction">\u00BC</string>
    <string name="one_half_fraction">\u00BD</string>
    <string name="three_quarter_fraction">\u00BE</string>
    <string name="one_eighth_fraction">\u215B</string>
    <string name="three_eighth_fraction">\u215C</string>
    <string name="five_eighth_fraction">\u215D</string>
    <string name="one_third_fraction">\u2153</string>
    <string name="two_third_fraction">\u2154</string>
    <string name="one_fifth_fraction">\u2155</string>
    <string name="two_fifth_fraction">\u2156</string>
    <string name="three_fifth_fraction">\u2157</string>
    <string name="four_fifth_fraction">\u2158</string>
    <string name="list_ingredient_title">Ingredients</string>
    <string name="list_direction_title">Directions</string>
    <string name="direction_step">Step %d</string>
    <string name="format_reviews">%d reviews</string>
    <string name="format_reviews_single">%d review</string>
    <string name="format_author">Recipe by <xliff:g id="author">%s</xliff:g></string>
    <string name="nutrient_calories_title">Calories</string>
    <string name="nutrient_fat_title">Fat</string>
    <string name="nutrient_carbs_title">Carbs</string>
    <string name="nutrient_protein_title">Protein</string>
    <string name="nutrient_cholesterol_title">Cholesterol</string>
    <string name="nutrient_sodium_title">Sodium</string>
    <string name="format_nutrient_calories">%d <xliff:g id="calorie_measurement">kcal</xliff:g></string>
    <string name="format_nutrient_fat">%.1f <xliff:g id="fat_measurement">g</xliff:g></string>
    <string name="format_nutrient_carbs">%.1f <xliff:g id="carbs_measurement">g</xliff:g></string>
    <string name="format_nutrient_protein">%.1f <xliff:g id="protein_measurement">g</xliff:g></string>
    <string name="format_nutrient_cholesterol">%d <xliff:g id="cholesterol_measurement">mg</xliff:g></string>
    <string name="format_nutrient_sodium">%d <xliff:g id="sodium_measurement">mg</xliff:g></string>
    <string name="nutrition_info_serving_disclosure">Amount per serving (%d total)</string>
    <string name="nutrition_info_disclosure">Percentage values are based on %d calorie diet</string>
    <string name="set_user_calories_prompt">How many calories should the nutrition information be calculated for?</string>
    <string name="calories_default">2000</string>
    <string name="fat_percent_float_default">0.25</string>
    <string name="carb_percent_float_default">0.50</string>
    <string name="protein_percent_float_default">0.25</string>
    <string name="cholesterol_mg_default">200</string>
    <string name="sodium_mg_default">1500</string>
    <string name="fat_cal_per_gram">9</string>
    <string name="carb_cal_per_gram">4</string>
    <string name="protein_cal_per_gram">4</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_nutrition_title" translatable="false">Nutrition Settings</string>
    <string name="pref_nutrition_key" translatable="false">nutrition</string>
    <string name="pref_calorie_key" translatable="false">calories</string>
    <string name="pref_fat_key" translatable="false">fat</string>
    <string name="pref_carb_key" translatable="false">carb</string>
    <string name="pref_protein_key" translatable="false">protein</string>
    <string name="pref_cholesterol_key" translatable="false">cholesterol</string>
    <string name="pref_sodium_key" translatable="false">sodium</string>
    <string name="pref_backup_title">Backup and Restore</string>
    <string name="pref_backup_key" translatable="false">backup</string>
    <string name="pref_last_sync" translatable="false">last_sync</string>
    <string name="pref_run_once_key" translatable="false">run_once</string>
    <string name="my_recipes_key">my_recipes</string>
    <string name="title_activity_create_recipe">CreateRecipeActivity</string>
    <string name="fab_add_recipe">Create New Recipe</string>
    <string name="fab_import_recipe">Import Recipe</string>
    <string name="fab_close">Close</string>
    <string name="button_confirm">OK</string>
    <string name="button_deny">CANCEL</string>
    <string name="hint_import_url">Link to recipe</string>
    <string name="hint_recipebook_title">Recipe book title</string>
    <string name="hint_recipebook_description">Recipe book description</string>
    <string name="hint_chapter_details_title">Chapter title</string>
    <string name="hint_chapter_details_description">Chapter description</string>
    <string name="hint_create_recipe_author">Author name</string>
    <string name="http_scheme">http</string>
    <string name="allrecipes_authority">allrecipes.com</string>
    <string name="allrecipes_www_authority">www.allrecipes.com</string>
    <string name="custom_authority">user.custom</string>
    <string name="food_authority">food.com</string>
    <string name="food_www_authority">www.food.com</string>
    <string name="seriouseats_authority">seriouseats.com</string>
    <string name="seriouseats_www_authority">www.seriouseats.com</string>
    <string name="epicurious_authority">epicurious.com</string>
    <string name="epicurious_www_authority">www.epicurious.com</string>
    <string name="create_recipe_name_hint">Recipe Name</string>
    <string name="create_recipe_description_hint">Recipe Description</string>
    <string name="create_recipe_ingredient_quantity_hint">Quantity</string>
    <string name="create_recipe_ingredient_name_hint">Ingredient</string>
    <string name="create_recipe_direction_hint">Directions</string>
    <string name="food_image_dir">image_food</string>
    <string name="edit_recipe_name_key">edit_recipe_name</string>
    <string name="edit_recipe_description_key">edit_recipe_description</string>
    <string name="edit_recipe_image_key">edit_recipe_image</string>
    <string name="edit_recipe_id_key">edit_recipe_id</string>
    <string name="edit_recipe_ingredients_key">edit_recipe_ingredients</string>
    <string name="edit_recipe_directions_key">edit_recipe_directions</string>
    <string name="list_add_ingredient_quantity_hint">Quantity</string>
    <string name="list_add_ingredient_name_hint">Ingredient</string>
    <string name="list_add_ingredient_text">Add an ingredient</string>
    <string name="list_add_direction_hint">Start writing!</string>
    <string name="list_add_direction_text">Add a direction</string>
    <string name="attribution_custom">user-added</string>
    <string name="attribution_allrecipes">Allrecipes.com</string>
    <string name="attribution_food">Food.com</string>
    <string name="attribution_seriouseats">Serious Eats</string>
    <string name="attribution_epicurious">epicurious</string>
    <string name="title_activity_favorites">My Favorites</string>
    <string name="title_activity_recipe_book">My Recipe Books</string>
    <string name="title_activity_chapter">Chapters</string>
    <string name="uri_key">uri</string>
    <string name="projection_key">projection</string>
    <string name="selection_key">selection</string>
    <string name="selection_args_key">selectionArgs</string>
    <string name="sort_order_key">sortOrder</string>
    <string name="search_hint">Search</string>
    <string name="title_activity_my_recipes">My Recipes</string>
    <string name="search_online_text">Not finding what you\'re looking for? \nImport more recipes online!</string>
    <string name="transition_recipe_image">tn_recipe_image</string>
    <string name="title_activity_search">ActivitySearch</string>
    <string name="extra_url">extra_recipe_url</string>
    <string name="extra_time">time_in_millis</string>
    <string name="extra_image">recipe_image</string>
    <string name="extra_generic_boolean">is_generic</string>
    <string name="intent_filter_sync_finished">project.kitchen.ON_FINISH_SYNC</string>
    <string name="error_empty">Please wait while recipes are imported.</string>
    <string name="error_network_down">Error connecting to the site.\nPlease check network connectivity!</string>
    <string name="error_unknown">Unknown error attempting to import recipes.\nPlease contact the developer!</string>
    <string name="error_last_sync">Failed to sync! Last sync occurred %s ago. Connect to a network to import latest recipes.</string>
    <string name="day_singular">day</string>
    <string name="day_multiple">days</string>
    <string name="hour_singular">hour</string>
    <string name="hour_multiple">hours</string>
    <string name="toast_no_recipe_books">Please create a recipe book first to save this recipe to your recipe book!</string>
    <string name="toast_chapter_contains_recipe">This chapter already contains this recipe. Please select another recipe!</string>
    <string name="toast_recipe_in_chapter">This chapter already contains this recipe. Please select another chapter!</string>
    <string name="toast_unable_to_parse_recipe">"Unable to identify the recipe on the website. \nPlease use our \"Create recipe\" function to import the recipe."</string>
    <string name="toast_backup_local_success">Backup completed! Files can be found in your Downloads/project.kitchen/ folder</string>
    <string name="toast_restore_local_success">Restore completed! Please close the app and open it to see the changes.</string>
    <string name="toast_backup_drive_success">Backup to Google Drive completed!</string>
    <string name="toast_restore_drive_success">Restore from Google Drive completed! Please close the app and open it to see the changes.</string>
    <string name="toast_local_failed">Procedure failed. Please grant permission to access storage.</string>
    <string name="toast_local_no_backup">No backup found at Downloads/project.kitchen/ folder.</string>
    <string name="toast_drive_failed">Failed to connect to Google Drive.</string>
    <string name="toast_drive_no_backup">No backup found on Google Drive. Unable to restore.</string>
    <string name="dialog_confirm_delete_chapter">Are you sure you want to remove this chapter and all its contents?</string>
    <string name="dialog_confirm_delete_recipe_book">Are you sure you want to remove this recipe book and all its contents?</string>
    <string name="dialog_confirm_delete_recipe">Are you sure you want to remove this recipe and all its contents?</string>
    <string name="dialog_confirm_add_recipe_to_recipe_book">This recipe book already contains a chapter with this recipe. Would you like to continue?</string>
</resources>