<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="project.hnoct.kitchen.ui.ActivityRecipeList">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_favorites"
        android:orderInCategory="2"
        android:title="@string/favorite_title" />

    <item
        android:id="@+id/action_my_recipes"
        android:orderInCategory="3"
        android:title="@string/my_recipes_title" />

    <item
        android:id="@+id/action_my_recipe_books"
        android:orderInCategory="4"
        android:title="@string/recipe_book_title" />

    <item
        android:id="@+id/action_copy_db"
        android:orderInCategory="5"
        android:title="@string/transfer_db_title" />

    <item
        android:id="@+id/action_clear_data"
        android:title="@string/action_clear_data"
        android:orderInCategory="99"/>
</menu>
