<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="project.kitchen.ui.ActivityRecipeBook">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        android:checkable="true"
        android:checked="false"/>

    <item
        android:id="@+id/action_browse"
        android:orderInCategory="1"
        android:title="@string/browse_title"
        android:checked="false"
        android:checkable="true" />

    <item
        android:id="@+id/action_favorites"
        android:orderInCategory="2"
        android:title="@string/favorite_title"
        android:checked="false"
        android:checkable="true" />

    <item
        android:id="@+id/action_my_recipes"
        android:orderInCategory="3"
        android:title="@string/my_recipes_title"
        android:checked="false"
        android:checkable="true" />

    <item
        android:id="@+id/action_my_recipe_books"
        android:orderInCategory="4"
        android:title="@string/recipe_book_title"
        android:checked="true"
        android:checkable="true" />

    <item
        android:id="@+id/action_shopping_list"
        android:orderInCategory="5"
        android:title="@string/shopping_list_title"
        android:checked="false"
        android:checkable="true" />

</menu>
