<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="project.kitchen.ui.ActivityRecipeList">

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:descendantFocusability="beforeDescendants"
        android:transitionGroup="false"
        android:fitsSystemWindows="true">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:transitionGroup="true"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:layout_scrollFlags="scroll|enterAlways"
                app:popupTheme="@style/AppTheme.PopupOverlay">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingRight="@dimen/activity_vertical_margin"
                    android:paddingEnd="@dimen/activity_vertical_margin" >

                    <TextView
                        android:id="@+id/app_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:text="kitchen"
                        android:textColor="@color/opaque_white"
                        style="@style/titleText"/>

                    <ImageView
                        android:id="@+id/search_icon"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:padding="@dimen/button_margin"
                        android:src="@drawable/ic_menu_search"/>

                    <View
                        android:id="@+id/right_bound"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_centerVertical="true"
                        android:layout_alignLeft="@id/search_icon"
                        android:layout_alignStart="@id/search_icon" />

                    <EditText
                        android:id="@+id/searchview"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:inputType="textAutoCorrect"
                        android:imeOptions="actionSearch"
                        android:hint="@string/search_hint"
                        android:backgroundTint="@color/opaque_white"
                        android:layout_alignRight="@id/right_bound"
                        android:layout_alignEnd="@id/right_bound"
                        android:visibility="invisible"/>

                </RelativeLayout>

            </android.support.v7.widget.Toolbar>

        </android.support.design.widget.AppBarLayout>

        <include layout="@layout/content_main" />

        <android.support.v7.widget.GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            app:columnCount="2">

            <TextView
                android:id="@+id/main_add_recipe_text"
                android:text="@string/fab_add_recipe"
                android:padding="@dimen/fab_label_padding"
                android:textColor="@color/opaque_white"
                android:background="@drawable/fab_label_background"
                android:visibility="invisible"
                app:layout_gravity="center_vertical|end"
                tools:visibility="visible"/>

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/main_add_recipe_fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                app:layout_gravity="center_horizontal"
                app:srcCompat="@drawable/ic_menu_edit"
                app:fabSize="mini"
                tools:visibility="visible"/>

            <TextView
                android:id="@+id/main_import_recipe_text"
                android:text="@string/fab_import_recipe"
                android:padding="@dimen/fab_label_padding"
                android:textColor="@color/opaque_white"
                android:background="@drawable/fab_label_background"
                android:layout_marginTop="@dimen/fab_margin"
                android:visibility="invisible"
                app:layout_gravity="center_vertical|end"
                tools:visibility="visible"/>

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/main_import_recipe_fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/fab_margin"
                android:visibility="invisible"
                app:layout_gravity="center_horizontal"
                app:srcCompat="@drawable/ic_menu_download_custom"
                app:fabSize="mini"
                tools:visibility="visible"/>

            <TextView
                android:id="@+id/main_menu_text"
                android:text="@string/fab_close"
                android:padding="@dimen/fab_label_padding"
                android:textColor="@color/opaque_white"
                android:background="@drawable/fab_label_background"
                android:visibility="invisible"
                app:layout_gravity="center_vertical|end"
                tools:visibility="visible"/>

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/main_menu_fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/fab_margin"
                app:layout_gravity="center_horizontal"
                app:srcCompat="@drawable/ic_menu_add_custom" />

        </android.support.v7.widget.GridLayout>

    </android.support.design.widget.CoordinatorLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/navigation_drawer"
        android:layout_width="@dimen/navigation_drawer_width"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/opaque_white"
        app:itemBackground="@drawable/menu_background_color"
        app:itemTextColor="@color/menu_text_color"
        app:menu="@menu/menu_main">

    </android.support.design.widget.NavigationView>

</android.support.v4.widget.DrawerLayout>